# g4bench

./: .gitignore  CMakeLists.txt  Copyright.txt  LICENSE  README.md  config.cmake  configure  g4env.sh  version.h
.circleci/: config.yml
.github/workflows/: blank.yml  codeql-analysis.yml  pages.yml  test_ecal.yml  (+7 more)
bench/: CMakeLists.txt  bench_all.sh  bench_score.sh  benchmark.md  ecal_e1000.sh  eps-ecal-mp.ipynb  eps-hcal-mp.ipynb  eps-vgeo-p200-mp.ipynb  eps-vgeo-x18-mp.ipynb  hcal_p10.sh  mtbench.sh  mtbench_all.sh  vgeo_e20.sh  vgeo_p200.sh  vgeo_x18.sh
bench/plots/: eps-ecal-mp.ipynb  eps-hcal-mp.ipynb  eps-vgeo-p200-mp.ipynb  eps-vgeo-x18-mp.ipynb  g4bench_10.6.1_mp.ipynb  g4bench_mp.ipynb  g4bench_reg_mp.ipynb
bench/plots/data/10.2.3/xeon_gold_6240/: ecal.json
bench/plots/data/10.3.3/xeon_gold_6240/: ecal.json  vgeo_e20.json  vgeo_x18.json
bench/plots/data/10.4.3/xeon_gold_6240/: ecal.json  hcal.json  vgeo_e20.json  vgeo_x18.json
bench/plots/data/10.5.1/xeon_gold_6240/: ecal.json  hcal.json  vgeo_x18.json
bench/plots/data/10.6.1/amd_epyc_7501/: ecal.json  hcal.json
bench/plots/data/10.6.1/xeon_e5_2690/: ecal.json  vgeo_e20.json  vgeo_x18.json
bench/plots/data/10.6.1/xeon_e5_2690/gems/: ecal.json  hcal.json
bench/plots/data/10.6.1/xeon_gold_6142/: vgeo_x18.json
bench/plots/data/10.6.1/xeon_gold_6148/: vgeo_e20.json  vgeo_x18.json
bench/plots/data/10.6.1/xeon_gold_6240/: ecal.json  hcal.json
bench/plots/data/10.6.1/xeon_x5680/: hcal.json  vgeo_e20.json  vgeo_x18.json
bench/plots/data/10.6.2/xeon_gold_6240/: ecal.json  vgeo_e20.json  vgeo_x18.json
bench/plots/data/10.7.1/apple_m1/: ecal.json  hcal.json  vgeo_x18.json
bench/plots/data/10.7.1/ryzen_trpro_3995wx/: ecal.json  hcal.json  vgeo_x18.json
bench/plots/data/10.7.1/xeon_e5_2690/: ecal.json  vgeo_e20.json  vgeo_x18.json
bench/plots/data/10.7.1/xeon_gold_6142/: vgeo_e20.json
bench/plots/data/10.7.1/xeon_gold_6148/: ecal.json  vgeo_e20.json  vgeo_x18.json
bench/plots/data/10.7.1/xeon_gold_6240/: ecal.json  vgeo_e20.json
bench/plots/data/10.7.3/i9-12900K/: vgeo_p200.json
bench/plots/data/10.7.3/ryzen_trpro_3995wx/: vgeo_p200.json  vgeo_x18.json
bench/plots/multi-thread/: eps-ecal.ipynb  eps-hcal.ipynb  eps-vgeo-p200.ipynb  eps-vgeo-x18.ipynb
bench/plots/multi-thread/data/10.7.3/apple_m1/: ecal_e1000.json  hcal_p10.json  vgeo_e20.json  vgeo_p200.json  vgeo_x18.json
bench/plots/multi-thread/data/10.7.3/epyc_7643/: ecal_e1000.json  hcal_p10.json  vgeo_e20.json  vgeo_p200.json  vgeo_x18.json
bench/plots/multi-thread/data/10.7.3/i9-12900K/: ecal_e1000.json  hcal_p10.json  vgeo_e20.json  vgeo_p200.json  vgeo_x18.json
bench/plots/multi-thread/data/10.7.3/ryzen_trpro_3995wx/: ecal_e1000.json  hcal_p10.json  vgeo_e20.json  vgeo_p200.json  vgeo_x18.json
bench/plots/multi-thread/data/10.7.3/xeon_gold_6240/: ecal_e1000.json  hcal_p10.json  vgeo_e20.json  vgeo_p200.json  vgeo_x18.json
bench/plots/single-thread/: g4bench.ipynb  g4regression.ipynb
bench/plots/single-thread/data/10.2.3/xeon_gold_6240/: hcal.json  vgeo_e20.json  vgeo_x18.json
bench/plots/single-thread/data/10.3.3/xeon_gold_6240/: hcal.json
bench/plots/single-thread/data/10.5.1/xeon_gold_6240/: vgeo_e20.json
bench/plots/single-thread/data/10.6.1/amd_epyc_7501/: vgeo_e20.json  vgeo_x18.json
bench/plots/single-thread/data/10.6.1/xeon_e5_2690/: hcal.json
bench/plots/single-thread/data/10.6.1/xeon_e5_2690/gems/: vgeo_e20.json  vgeo_x18.json
bench/plots/single-thread/data/10.6.1/xeon_gold_6142/: ecal.json  hcal.json  vgeo_e20.json
bench/plots/single-thread/data/10.6.1/xeon_gold_6148/: ecal.json  hcal.json
bench/plots/single-thread/data/10.6.1/xeon_gold_6240/: vgeo_e20.json  vgeo_x18.json
bench/plots/single-thread/data/10.6.1/xeon_x5680/: ecal.json
bench/plots/single-thread/data/10.6.2/xeon_gold_6240/: hcal.json
bench/plots/single-thread/data/10.7.1/apple_m1/: vgeo_e20.json
bench/plots/single-thread/data/10.7.1/ryzen_trpro_3995wx/: vgeo_e20.json
bench/plots/single-thread/data/10.7.1/xeon_e5_2690/: hcal.json
bench/plots/single-thread/data/10.7.1/xeon_gold_6142/: ecal.json  hcal.json  vgeo_x18.json
bench/plots/single-thread/data/10.7.1/xeon_gold_6148/: hcal.json
bench/plots/single-thread/data/10.7.1/xeon_gold_6240/: hcal.json  vgeo_x18.json
bench/plots/single-thread/data/10.7.3/apple_m1/: ecal.json  hcal.json  vgeo_e20.json  vgeo_p200.json  vgeo_x18.json
bench/plots/single-thread/data/10.7.3/epyc_7643/: ecal.json  hcal.json  vgeo_e20.json  vgeo_p200.json  vgeo_x18.json
bench/plots/single-thread/data/10.7.3/i9-12900K/: ecal.json  hcal.json  vgeo_e20.json  vgeo_x18.json
bench/plots/single-thread/data/10.7.3/ryzen_trpro_3995wx/: ecal.json  hcal.json  vgeo_e20.json
bench/plots/single-thread/data/10.7.3/xeon_gold_6240/: ecal.json  hcal.json  vgeo_e20.json  vgeo_p200.json  vgeo_x18.json
cmake/: FindGeant4.cmake  version.h.in
common/: appbuilder.h  calscorer.cc  calscorer.h  eventaction.cc  eventaction.h  g4environment.cc  g4environment.h  particlegun.cc  particlegun.h  runaction.cc  runaction.h  simdata.h  stepaction.cc  stepaction.h
docs/: Installation.md  README.md  index.md
ecal/: CMakeLists.txt  appbuilder.cc  appbuilder.h  calscorer.cc  calscorer.h  config.json5  config.tmpl  ecalgeom.cc  ecalgeom.h  eventaction.cc  main.cc  particlegun.h  runaction.cc  runaction.h  simdata.cc  simdata.h  stepaction.cc  stepaction.h
hcal/: CMakeLists.txt  appbuilder.cc  appbuilder.h  calscorer.h  config.tmpl  eventaction.cc  eventaction.h  hcalgeom.cc  hcalgeom.h  main.cc  particlegun.cc  runaction.cc  runaction.h  simdata.cc  simdata.h  stepaction.cc  stepaction.h
util/: getopt.c  getopt.h  getopt_long.c  jsonparser.cc  jsonparser.h  stopwatch.cc  stopwatch.h  timehistory.cc  timehistory.h
vgeo/: CMakeLists.txt  appbuilder.cc  appbuilder.h  calscorer.cc  calscorer.h  config.tmpl  eventaction.cc  eventaction.h  main.cc  medicalbeam.cc  medicalbeam.h  particlegun.cc  particlegun.h  phantom_pvp.cc  phantom_pvp.h  runaction.cc  runaction.h  simdata.cc  simdata.h  voxelgeom.cc  voxelgeom.h
(+23 files in other folders)
